--- a/src/Ray.BiliBiliTool.Console/appsettings.json
+++ b/src/Ray.BiliBiliTool.Console/appsettings.json
@@ -1,19 +1,19 @@
 {
   //Cookie信息，取自浏览器，必填，优先级低于命令行中的配置值
   "BiliBiliCookie": {
-    "CookieStr": "" //Cookie字符串，登录bilibili后F12，点击任意bilibili接口，从 Headers—>Request Headers—>cookie 获取，如"_uuid=abcd; buvid3=1234; sid=abc123"
+    "CookieStr": "_uuid=7A0FF42D-2C9C-99C5-8F2E-03DE7ACFB5B909320infoc; buvid3=C7D27C81-A739-4328-89BB-712BBB56992058481infoc; sid=adbm78cd; LIVE_BUVID=AUTO2616078555423623; CURRENT_FNVAL=80; fingerprint3=932a36d2e0e95cd8a35c7267c3aeabad; buivd_fp=C7D27C81-A739-4328-89BB-712BBB56992058481infoc; blackside_state=1; rpdid=|(um|Jl~Yllu0J'uY|~)lY|lY; buvid_fp=C7D27C81-A739-4328-89BB-712BBB56992058481infoc; CURRENT_QUALITY=80; fingerprint_s=332a8ab429b013b4bcf21914444de6b6; bsource=search_bing; finger=1571944565; PVID=1; fingerprint=523d98974e6eb5169ec7d2852c31f559; buvid_fp_plain=26D57FC0-0172-4429-879B-1A82AAE18313155826infoc; DedeUserID=1923724482; DedeUserID__ckMd5=7c05f217946bb051; SESSDATA=d28b2277%2C1629802996%2C668fe*21; bili_jct=6ba6659731c5bb9da7958c4767adb5f8" //Cookie字符串，登录bilibili后F12，点击任意bilibili接口，从 Headers—>Request Headers—>cookie 获取，如"_uuid=abcd; buvid3=1234; sid=abc123"
   },
 
   //程序自定义个性化配置
   "DailyTaskConfig": {
     "NumberOfCoins": 5, //每日设定的投币数 [0,5]
     "SelectLike": true, //投币时是否同时点赞[false,true]
-    "SupportUpIds": ",341688380,1585227649,", //优先选择支持的up主Id集合，多个以英文逗号分隔，如："123,456"。配置后会优先从指定的up主下挑选视频进行观看、分享和投币，不配置或配置为-1则表示没有特别支持的up，会从关注和排行耪中随机获取支持视频
+    "SupportUpIds": "315952061", //优先选择支持的up主Id集合，多个以英文逗号分隔，如："123,456"。配置后会优先从指定的up主下挑选视频进行观看、分享和投币，不配置或配置为-1则表示没有特别支持的up，会从关注和排行耪中随机获取支持视频
     "DayOfAutoCharge": -1, //每月几号自动充电的[-1,31]，-1表示不指定，默认月底最后一天；0表示不充电
-    "AutoChargeUpId": "341688380", //指定支持的UP主Id，-1表示自己
+    "AutoChargeUpId": "315952061", //指定支持的UP主Id，-1表示自己
     "ChargeComment": "加油~", //充电后留言
     "DayOfReceiveVipPrivilege": 1, //每月几号自动领取会员权益的[-1,31]，-1表示不指定，默认每月1号；0表示不自动领取
-    "DayOfExchangeSilver2Coin": 0, //每月几号执行银瓜子兑换硬币[-1,31]，-1表示不指定，默认每月最后一天；-2表示每天；0表示不进行兑换
+    "DayOfExchangeSilver2Coin": -2, //每月几号执行银瓜子兑换硬币[-1,31]，-1表示不指定，默认每月最后一天；-2表示每天；0表示不进行兑换
     "DevicePlatform": "android" //执行客户端操作时的平台 [ios,android]
   },
 
@@ -82,7 +82,7 @@
       {
         "Name": "WorkWeiXinBatched",
         "Args": {
-          "webHookUrl": "",
+          "webHookUrl": "https://qyapi.weixin.qq.com/cgi-bin/webhook/send?key=be6bdccf-25c7-43a8-a872-7bc75e0c5798",
           "containsTrigger": "开始推送",
           "restrictedToMinimumLevel": "Information"
         }
