--- a/src/Ray.BiliBiliTool.Console/appsettings.json
+++ b/src/Ray.BiliBiliTool.Console/appsettings.json
@@ -1,7 +1,7 @@
 {
   //Cookie信息，取自浏览器，必填，优先级低于命令行中的配置值
   "BiliBiliCookie": {
-    "CookieStr": "_uuid=7A0FF42D-2C9C-99C5-8F2E-03DE7ACFB5B909320infoc; buvid3=C7D27C81-A739-4328-89BB-712BBB56992058481infoc; sid=adbm78cd; LIVE_BUVID=AUTO2616078555423623; CURRENT_FNVAL=80; fingerprint3=932a36d2e0e95cd8a35c7267c3aeabad; buivd_fp=C7D27C81-A739-4328-89BB-712BBB56992058481infoc; blackside_state=1; rpdid=|(um|Jl~Yllu0J'uY|~)lY|lY; buvid_fp=C7D27C81-A739-4328-89BB-712BBB56992058481infoc; CURRENT_QUALITY=80; fingerprint_s=332a8ab429b013b4bcf21914444de6b6; bsource=search_bing; finger=1571944565; PVID=1; fingerprint=523d98974e6eb5169ec7d2852c31f559; buvid_fp_plain=26D57FC0-0172-4429-879B-1A82AAE18313155826infoc; DedeUserID=1923724482; DedeUserID__ckMd5=7c05f217946bb051; SESSDATA=d28b2277%2C1629802996%2C668fe*21; bili_jct=6ba6659731c5bb9da7958c4767adb5f8" //Cookie字符串，登录bilibili后F12，点击任意bilibili接口，从 Headers—>Request Headers—>cookie 获取，如"_uuid=abcd; buvid3=1234; sid=abc123"
+    "CookieStr": "bsource=search_bing; finger=158939783; _uuid=A3504812-E7FA-24AC-95EE-71D01486441535545infoc; buvid3=7213B697-49D2-40DF-87E3-2191553DCB1718555infoc; sid=ijih907w; fingerprint=f50e9520cfd65e551042bf4af2efbddd; buvid_fp=7213B697-49D2-40DF-87E3-2191553DCB1718555infoc; buvid_fp_plain=DC00F7E8-EF68-48D0-A536-B355BF68DB9718566infoc; DedeUserID=1923724482; DedeUserID__ckMd5=7c05f217946bb051; SESSDATA=29be5ed2,1629976200,b70eb*21; bili_jct=a3fc9bf8a5b6b882b35bddf40d8367ec"
   },
 
   //程序自定义个性化配置
