--- a/src/Ray.BiliBiliTool.Console/appsettings.json
+++ b/src/Ray.BiliBiliTool.Console/appsettings.json
@@ -1,7 +1,7 @@
 {
   //Cookie信息，取自浏览器，必填，优先级低于命令行中的配置值
   "BiliBiliCookie": {
-    "CookieStr": "bsource=search_bing; finger=158939783; _uuid=A3504812-E7FA-24AC-95EE-71D01486441535545infoc; buvid3=7213B697-49D2-40DF-87E3-2191553DCB1718555infoc; sid=ijih907w; fingerprint=f50e9520cfd65e551042bf4af2efbddd; buvid_fp=7213B697-49D2-40DF-87E3-2191553DCB1718555infoc; buvid_fp_plain=DC00F7E8-EF68-48D0-A536-B355BF68DB9718566infoc; DedeUserID=1923724482; DedeUserID__ckMd5=7c05f217946bb051; SESSDATA=29be5ed2,1629976200,b70eb*21; bili_jct=a3fc9bf8a5b6b882b35bddf40d8367ec"
+    "CookieStr": "bsource=search_baidu; _uuid=CC8DBB31-3996-A283-33C2-82B94435297355313infoc; buvid3=81F2AC87-ED13-4A88-B4E9-B0FDC8599076184982infoc; bfe_id=1bad38f44e358ca77469025e0405c4a6; fingerprint=d50e08aeaea27e4f7e5fb36391cc0d60; buvid_fp=81F2AC87-ED13-4A88-B4E9-B0FDC8599076184982infoc; buvid_fp_plain=E88AA5A2-5682-4ECC-9F1C-D8B9BA25547A185001infoc; SESSDATA=cba510e3%2C1629978495%2C3e97f%2A21; bili_jct=d211d747f638dda0bb2b290a0d4efac8; DedeUserID=1923724482; DedeUserID__ckMd5=7c05f217946bb051; sid=6v72uwlf; PVID=1"
   },
 
   //程序自定义个性化配置
